--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="card-img">
         <!-- image  will be added here -->
         <img
-          src="C:\Users\Legion\Downloads\qr-code-component-main\qr-code-component-main\images\image-qr-code.png"
+          src="https://github.com/sundaramrap/qr-code-component-main/blob/main/images/image-qr-code.png"
           alt="qr-code-img"
         />
       </div>
