--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="card-img">
         <!-- image  will be added here -->
         <img
-          src="https://github.com/sundaramrap/qr-code-component-main/blob/main/images/image-qr-code.png"
+        <img src="./images/image-qr-code.png" alt="qr-code to frontendmentor.io">
           alt="qr-code-img"
         />
       </div>
